--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx hardhat test"
+    "test": "npx hardhat test",
+    "compile": "npx hardhat compile",
+    "deploy:kovan": "npx hardhat run scripts/infinity-deploy.js --network kovan"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +22,7 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.1.0",
     "hardhat": "^2.1.2",
-    "assert": "2.0.0"
+    "assert": "2.0.0",
+    "dotenv": "8.2.0"
   }
 }
