--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "npx hardhat test",
     "compile": "npx hardhat compile",
-    "deploy:kovan": "npx hardhat run scripts/infinity-deploy.js --network kovan"
+    "deploy:kovan": "npx hardhat run scripts/infinity-deploy.js --network kovan",
+    "deploy:bscTestnet": "npx hardhat run scripts/infinity-deploy.js --network bscTestnet"
   },
   "keywords": [],
   "author": "",
