--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "compile": "npx hardhat compile",
     "deploy:kovan": "npx hardhat run scripts/infinity-deploy.js --network kovan",
     "deploy:bscTestnet": "npx hardhat run scripts/infinity-deploy.js --network bscTestnet",
-    "deploy:bscTestnetOracle": "npx hardhat run scripts/oracle-deploy.js --network bscTestnet"
+    "deploy:bscTestnetOracle": "npx hardhat run scripts/oracle-deploy.js --network bscTestnet",
+    "deploy:bscMainnet": "npx hardhat run scripts/infinity-deploy.js --network bscMainnet",
+    "deploy:bscMainnetOracle": "npx hardhat run scripts/oracle-deploy.js --network bscMainnet"
   },
   "keywords": [],
   "author": "",
