--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "deploy:bscTestnet": "npx hardhat run scripts/infinity-deploy.js --network bscTestnet",
     "deploy:bscTestnetOracle": "npx hardhat run scripts/oracle-deploy.js --network bscTestnet",
     "deploy:bscMainnet": "npx hardhat run scripts/infinity-deploy.js --network bscMainnet",
-    "deploy:bscMainnetOracle": "npx hardhat run scripts/oracle-deploy.js --network bscMainnet"
+    "deploy:bscMainnetOracle": "npx hardhat run scripts/oracle-deploy.js --network bscMainnet",
+    "deploy:bscMainnetSpace": "npx hardhat run scripts/dual-vaults-space-deploy.js --network bscMainnet"
   },
   "keywords": [],
   "author": "",
