--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "deploy:bscMainnet": "npx hardhat run scripts/infinity-deploy.js --network bscMainnet",
     "deploy:bscMainnetOracle": "npx hardhat run scripts/oracle-deploy.js --network bscMainnet",
     "deploy:bscMainnetSpace": "npx hardhat run scripts/dual-vaults-space-deploy.js --network bscMainnet",
-    "deploy:bscPower": "npx hardhat run scripts/power-vault-deploy.js --network bscMainnet"
+    "deploy:bscPower": "npx hardhat run scripts/power-vault-deploy.js --network bscMainnet",
+    "deploy:bscPowerTestnet": "npx hardhat run scripts/power-vault-deploy.js --network bscTestnet"
   },
   "keywords": [],
   "author": "",
