--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "dotenv": "8.2.0",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.1.0",
-    "hardhat": "^2.1.2"
+    "hardhat": "^2.1.2",
+    "hardhat-deploy": "^0.8.9",
+    "hardhat-deploy-ethers": "^0.3.0-beta.10"
   }
 }
